pyqt5 (5.15.0+dfsg-2) UNRELEASED; urgency=medium

  * Switch from sip4 to sip5:
    - Update build-dependencies.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 14 Jun 2020 14:19:50 +0300

pyqt5 (5.15.0+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Bump python3-sip-dev build-dependency to 4.19.23, following upstream.
  * Refresh debian/patches/public_sip.diff.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 09 Jun 2020 15:21:04 +0300

pyqt5 (5.14.2+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Drop the creation of .noinit file. It was needed for python-support
    long time ago, and never used in this package.
  * Rebuild the designer and QML plugins with Python 3.8 (closes: #955621).

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 07 Apr 2020 20:20:29 +0300

pyqt5 (5.14.1+dfsg-3) unstable; urgency=medium

  * Drop Python 2 support (closes: #937513).
  * Bump Standards-Version to 4.5.0, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 20 Feb 2020 15:30:37 +0300

pyqt5 (5.14.1+dfsg-2) unstable; urgency=medium

  [ Emmanuel Arias ]
  * python-*-dbg depends on python2-dbg instead of python-dbg. (Closes: #948495)
    - Patch by Matthias Klose

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 09 Jan 2020 20:19:41 +0300

pyqt5 (5.14.1+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Update debian/watch again, upstream tarballs are now on PyPI.
  * Bump sip build-dependencies to 4.19.20, following configure.py.
  * Drop Python 2 dbus.mainloop.pyqt5 packages.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 07 Jan 2020 18:02:01 +0300

pyqt5 (5.13.2+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Update debian/watch for removal of _gpl from tarball names.
  * Drop patches, applied in the new release:
    - python2_qstring.diff
    - remove_deprecated_sip_option.diff
  * Also drop qt_5_12_5.diff, no longer needed.
  * Refresh public_sip.diff.