@@ -1,0 +1,1 @@
+usr/lib/python3/dist-packages/dbus/mainloop/pyqt5.cpython-*.so
