@@ -1,26 +1,26 @@
 usr/lib/*/qt5/plugins/designer/libpyqt5.so
-usr/lib/python3*/dist-packages/PyQt5/Qt.so
-usr/lib/python3*/dist-packages/PyQt5/QtCore.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtCore.so
-usr/lib/python3*/dist-packages/PyQt5/QtDBus.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtDBus.so
-usr/lib/python3*/dist-packages/PyQt5/QtDesigner.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtDesigner.so
-usr/lib/python3*/dist-packages/PyQt5/QtGui.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtGui.so
-usr/lib/python3*/dist-packages/PyQt5/QtHelp.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtHelp.so
-usr/lib/python3*/dist-packages/PyQt5/QtNetwork.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtNetwork.so
-usr/lib/python3*/dist-packages/PyQt5/QtPrintSupport.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtPrintSupport.so
-usr/lib/python3*/dist-packages/PyQt5/QtTest.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtTest.so
-usr/lib/python3*/dist-packages/PyQt5/QtWidgets.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtWidgets.so
-usr/lib/python3*/dist-packages/PyQt5/QtXml.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtXml.so
-usr/lib/python3*/dist-packages/PyQt5/__init__.py
-usr/lib/python3*/dist-packages/PyQt5/uic/*
-usr/lib/python3*/dist-packages/PyQt5-5.*.dist-info/METADATA
-usr/lib/python3*/dist-packages/PyQt5-5.*.dist-info/INSTALLER
+usr/lib/python3/dist-packages/PyQt5-5.*.dist-info/INSTALLER
+usr/lib/python3/dist-packages/PyQt5-5.*.dist-info/METADATA
+usr/lib/python3/dist-packages/PyQt5/Qt.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtCore.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtCore.pyi
+usr/lib/python3/dist-packages/PyQt5/QtDBus.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtDBus.pyi
+usr/lib/python3/dist-packages/PyQt5/QtDesigner.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtDesigner.pyi
+usr/lib/python3/dist-packages/PyQt5/QtGui.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtGui.pyi
+usr/lib/python3/dist-packages/PyQt5/QtHelp.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtHelp.pyi
+usr/lib/python3/dist-packages/PyQt5/QtNetwork.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtNetwork.pyi
+usr/lib/python3/dist-packages/PyQt5/QtPrintSupport.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtPrintSupport.pyi
+usr/lib/python3/dist-packages/PyQt5/QtTest.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtTest.pyi
+usr/lib/python3/dist-packages/PyQt5/QtWidgets.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtWidgets.pyi
+usr/lib/python3/dist-packages/PyQt5/QtXml.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtXml.pyi
+usr/lib/python3/dist-packages/PyQt5/__init__.py
+usr/lib/python3/dist-packages/PyQt5/uic/*
