@@ -1,0 +1,2 @@
+usr/lib/python3/dist-packages/PyQt5/QtMultimedia.cpython-*.so
+usr/lib/python3/dist-packages/PyQt5/QtMultimediaWidgets.cpython-*.so
