@@ -1,0 +1,1 @@
+usr/lib/python3/dist-packages/PyQt5/*OpenGL*.cpython-*.so
