@@ -1,2 +1,2 @@
-usr/lib/python3*/dist-packages/PyQt5/*OpenGL*.pyi
-usr/lib/python3*/dist-packages/PyQt5/*OpenGL*.so
+usr/lib/python3/dist-packages/PyQt5/*OpenGL*.abi3.so
+usr/lib/python3/dist-packages/PyQt5/*OpenGL*.pyi
