@@ -1,0 +1,2 @@
+usr/lib/python3/dist-packages/PyQt5/QtLocation.cpython-*.so
+usr/lib/python3/dist-packages/PyQt5/QtPositioning.cpython-*.so
