@@ -1,0 +1,3 @@
+usr/lib/python3/dist-packages/PyQt5/QtQml.cpython-*.so
+usr/lib/python3/dist-packages/PyQt5/QtQuick.cpython-*.so
+usr/lib/python3/dist-packages/PyQt5/QtQuickWidgets.cpython-*.so
