@@ -1,7 +1,7 @@
 usr/lib/*/qt5/plugins/PyQt5/libpyqt5qmlplugin.so
-usr/lib/python3*/dist-packages/PyQt5/QtQml.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtQml.so
-usr/lib/python3*/dist-packages/PyQt5/QtQuick.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtQuick.so
-usr/lib/python3*/dist-packages/PyQt5/QtQuickWidgets.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtQuickWidgets.so
+usr/lib/python3/dist-packages/PyQt5/QtQml.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtQml.pyi
+usr/lib/python3/dist-packages/PyQt5/QtQuick.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtQuick.pyi
+usr/lib/python3/dist-packages/PyQt5/QtQuickWidgets.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtQuickWidgets.pyi
