@@ -1,2 +1,2 @@
-usr/lib/python3*/dist-packages/PyQt5/QtSql.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtSql.so
+usr/lib/python3/dist-packages/PyQt5/QtSql.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtSql.pyi
