@@ -1,2 +1,2 @@
-usr/lib/python3*/dist-packages/PyQt5/QtSvg.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtSvg.so
+usr/lib/python3/dist-packages/PyQt5/QtSvg.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtSvg.pyi
