@@ -1,2 +1,2 @@
-usr/lib/python3*/dist-packages/PyQt5/QtWebChannel.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtWebChannel.so
+usr/lib/python3/dist-packages/PyQt5/QtWebChannel.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtWebChannel.pyi
