@@ -1,0 +1,2 @@
+usr/lib/python3/dist-packages/PyQt5/QtWebKit.cpython-*.so
+usr/lib/python3/dist-packages/PyQt5/QtWebKitWidgets.cpython-*.so
