@@ -1,2 +1,2 @@
-usr/lib/python3*/dist-packages/PyQt5/QtWebSockets.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtWebSockets.so
+usr/lib/python3/dist-packages/PyQt5/QtWebSockets.abi3.so
+usr/lib/python3/dist-packages/PyQt5/QtWebSockets.pyi
