@@ -2,6 +2,7 @@ pyqt5 (5.15.0+dfsg-2) UNRELEASED; urgency=medium
 
   * Switch from sip4 to sip5:
     - Update build-dependencies.
+    - Build with sip-build instead of configure.py.
 
  -- Dmitry Shachnev <mitya57@debian.org>  Sun, 14 Jun 2020 14:19:50 +0300
 
